# blockchain-parser

./: CHANGELOG.md  COMMERCIAL.md  LICENSE  MANIFEST.in  README.md  README.txt  WARRANTY.md  blockchain-parser.py  pyproject.toml
blockchain_scalpel/: blockchain-parser.py  cli.py
result/: blk_example.txt
