[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "blockchain-scalpel"
version = "2.0.1"
description = "Blockchain parser (source-available). Free for non-commercial use with attribution. Commercial & SaaS licenses available."
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Denis Leonov" }]
license = { file = "LICENSE" }

classifiers = [
  "Programming Language :: Python :: 3",
  "License :: Other/Proprietary",
]

[project.urls]
Homepage = "https://github.com/ragestack/blockchain-parser"

[project.scripts]
blockchain-scalpel = "blockchain_scalpel.cli:main"
